[develop] posts filter from post body or post title values, fixed page jumping while scroll-bar toggle

--- a/src/assets/scss/utils/settings.scss
+++ b/src/assets/scss/utils/settings.scss
@@ -14,11 +14,14 @@ body {
 
   font-family: $font-family-base;
   font-size: $font-size-base;
-  transition: $transition-base;
+  //transition: $transition-base;
 
   margin: 0;
   &.scroll-blocked {
     overflow: hidden;
+  }
+  &.scroll-fix {
+    padding-right: $scrollbar-width;
   }
 }
 body.dark {
